08-May-2016 Issue #233. Using LINQ's First and FirstOrDefault, instead of Where as well, to identify any 'default' package versions marked in the master package definition file.

08-May-2016 Issue #233. The --showdefinition command now just uses LINQ's First function, rather than Where followed by First.

24-Apr-2016 Fixes #240. Updated the format of the table of task profiles at the end of the --stats output to make it easier to read.

24-Apr-2016 Issue #233. Bam.Core.Graph.FindReferencedModule now uses just LINQ's FirstOrDefault, rather than Where, followed by FirstOrDefault.

24-Apr-2016 Fixes #239. XML reads of package definition files now use the same reader settings (constructed once), without cloning, with validation always enabled (as it was by default previously, but was optional), and no repeated path combining for each definition file read to generate the same path (to the Bam schema).

24-Apr-2016 Issue #233. Bam.Core.Graph.Validate now uses fewer LINQ calls to validate the dependency graph.

24-Apr-2016 Fixes #238. Bam.Core.Graph.MakeModuleOfType now both compiles a generic method (generic type is the Module type found through reflection), and caches that compiled function for reuse. This reduces the cost of using the same module type over and over (likely for things like source files and object files).

24-Apr-2016 Fixes #237. On a build with multiple packages each referring to a common set of package repositories, directory enumeration was occurring repeatedly, incurring a performance penalty. Also, a directory structure containing packages in different subdirectories also tries to only scan (recursively) the parent directory, rather than both the parent and required subdirectories, redundantly.

22-Apr-2016 Fixes #236. Using a new algorithm to sort module dependencies, that eliminates redundant re-processing of modules in the dependency graph. This should be a reasonable performance gain for projects with many modules.
